--- a/.github/workflows/rust1.yml
+++ b/.github/workflows/rust1.yml
@@ -3,11 +3,14 @@ name: Rust1
 on:
   push:
     branches: [ "main" ]
+    tags:
+      - "v*.*.*" # 当推送符合模式v*.*.*的标签时触发工作流
   pull_request:
     branches: [ "main" ]
 
 env:
   CARGO_TERM_COLOR: always
+
 
 jobs:
   build:
