--- a/.github/workflows/rust1.yml
+++ b/.github/workflows/rust1.yml
@@ -138,8 +138,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 使用GitHub令牌进行身份验证
         with:
-          tag_name: ${{ github.ref }} # 使用推送的标签名
-          release_name: Release ${{ github.ref }} # 使用推送的标签名作为发布名称
+          tag_name: ${{ github.ref_name }} # 仅获取标签名
+          release_name: "Release ${{ github.ref_name }}" # 使用推送的标签名作为发布名称
           body: |
             Changes in this Release
             - First Change
